[package]
name = "gnosis-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
dirs = "6.0"
lsp-types = "0.97"
futures = "0.3"
url = "*"

